--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <archive>
           <manifest>
             <addClasspath>true</addClasspath>
-            <mainClass>com.example.CircleOfPeopleGame</mainClass> <!-- Specify your main class here -->
+            <mainClass>com.example.CowboyGame</mainClass> <!-- Specify your main class here -->
           </manifest>
         </archive>
       </configuration>
@@ -58,7 +58,7 @@
           <configuration>
             <transformers>
               <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                <mainClass>com.example.CircleOfPeopleGame</mainClass> <!-- Replace with your main class -->
+                <mainClass>com.example.CowboyGame</mainClass> <!-- Replace with your main class -->
               </transformer>
             </transformers>
           </configuration>
